--- a/Web/package.json
+++ b/Web/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "5.1.2",
     "react-scripts": "3.4.1",
     "redux": "4.0.5",
+    "redux-ignore": "1.2.5",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
