--- a/Web/package.json
+++ b/Web/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
+    "@ant-design/icons": "4.2.2",
     "@craco/craco": "5.6.4",
-    "antd": "4.6.2",
+    "antd": "4.6.5",
+    "axios": "0.20.0",
     "craco-less": "1.17.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "prop-types": "15.7.2",
     "react": "16.13.1",
-    "react-app-rewire-less": "^2.1.3",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
@@ -28,7 +28,6 @@
     "babel-plugin-import": "1.13.0",
     "customize-cra": "1.0.0",
     "less-loader": "7.0.0",
-    "react-app-rewired": "2.1.6",
     "terser-webpack-plugin": "^4.1.0"
   },
   "scripts": {
